--- a/FoodDeliveryWholeProject/WebContent/html/home.html
+++ b/FoodDeliveryWholeProject/WebContent/html/home.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <link href="../CSS/mainBody.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/800px.css" rel="stylesheet" type="text/css"  media="screen and (max-width: 800px)" />
 <link href="../CSS/mainButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/menuButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/meals.css" rel="stylesheet" type="text/css" />
@@ -44,7 +43,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;" >
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -56,7 +55,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;">
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -73,7 +72,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;" >
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -85,7 +84,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;">
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -102,7 +101,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;" >
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -114,7 +113,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;">
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -131,7 +130,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;" >
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -143,7 +142,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;">
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
