--- a/FoodDeliveryWholeProject/WebContent/html/layout.html
+++ b/FoodDeliveryWholeProject/WebContent/html/layout.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <link href="../CSS/mainBody.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/800px.css" rel="stylesheet" type="text/css"  media="screen and (max-width: 800px)" />
 <link href="../CSS/mainButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/menuButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/meals.css" rel="stylesheet" type="text/css" />
@@ -27,8 +26,8 @@
 			</ul>
 		</li>
 		
-		<li><a href="profile.html">Profile</a></li>
-		<li><a href="home.html">Logout</a></li>
+		<li><a href="profile.jsp">Profile</a></li>
+		<li><a href="logout.jsp">Logout</a></li>
 		</ul>                 
     </div>  
    	<div id="Menu">
@@ -51,7 +50,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='pizzas.html';">
              <div style="float:left;width:90px;" >
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -63,7 +62,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='pizzas.html';">
              <div style="float:left;width:90px;">
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -80,7 +79,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='pizzas.html';">
              <div style="float:left;width:90px;" >
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -92,7 +91,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='pizzas.html';">
              <div style="float:left;width:90px;">
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -109,7 +108,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='pizzas.html';">
              <div style="float:left;width:90px;" >
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -121,7 +120,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='pizzas.html';">
              <div style="float:left;width:90px;">
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -138,7 +137,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='pizzas.html';">
              <div style="float:left;width:90px;" >
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -150,7 +149,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='pizzas.html';">
              <div style="float:left;width:90px;">
-            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
