--- a/FoodDeliveryWholeProject/WebContent/html/search2.html
+++ b/FoodDeliveryWholeProject/WebContent/html/search2.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <link href="../CSS/mainBody.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/800px.css" rel="stylesheet" type="text/css"  media="screen and (max-width: 800px)" />
 <link href="../CSS/mainButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/menuButtons.css" rel="stylesheet" type="text/css" />
 <meta charset="utf-8">
@@ -21,7 +20,7 @@
 
 
 
-<script language="javascript">
+<script type="text/javascript">
 <!---
 
 function valthisform()
@@ -61,8 +60,8 @@ function valthisform()
         <li><a href="home.html">Home</a></li>
 		<li><a href="search2.html">Search</a></li>
 		<li><a href="faq.html">Guide</a></li>		
-		<li><a href="register.html">Register</a></li>
-		<li><a href="sign_up.html">Login</a></li>
+		<li><a href="sign_up.html">Register</a></li>
+		<li><a href="login.html">Login</a></li>
 		</ul>            
     </div>  
    	<div id="Menu">
