--- a/FoodDeliveryWholeProject/WebContent/html/archive_page_2.html
+++ b/FoodDeliveryWholeProject/WebContent/html/archive_page_2.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <link href="../CSS/mainBody.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/800px.css" rel="stylesheet" type="text/css"  media="screen and (max-width: 800px)" />
 <link href="../CSS/mainButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/menuButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/pagesSwitcher.css" rel="stylesheet" type="text/css" />
@@ -69,8 +68,8 @@ $("#skrit32").fadeToggle("slow");
 			</ul>
 		</li>
 		
-		<li><a href="profile.html">Profile</a></li>
-		<li><a href="home.html">Logout</a></li>
+		<li><a href="profile.jsp">Profile</a></li>
+		<li><a href="logout.jsp">Logout</a></li>
 		</ul>          
     </div>
 
