--- a/FoodDeliveryWholeProject/WebContent/html/bbq.html
+++ b/FoodDeliveryWholeProject/WebContent/html/bbq.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <link href="../CSS/mainBody.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/800px.css" rel="stylesheet" type="text/css"  media="screen and (max-width: 800px)" />
 <link href="../CSS/mainButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/menuButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/meals.css" rel="stylesheet" type="text/css" />
@@ -27,8 +26,8 @@
 			</ul>
 		</li>
 		
-		<li><a href="profile.html">Profile</a></li>
-		<li><a href="home.html">Logout</a></li>
+		<li><a href="profile.jsp">Profile</a></li>
+		<li><a href="logout.jsp">Logout</a></li>
 		</ul>                 
     </div>  
    	<div id="Menu">
@@ -50,7 +49,7 @@
 		<table class="cartMeal">
     	<tr>
         	<td class="cartCol1">
-            <img src="images/meat.jpg" alt="" width="90" height="90">
+            <img src="../images/meat.jpg" alt="" width="90" height="90">
             </td>
             <td class="cartCol2" >
             <div>
@@ -72,7 +71,7 @@
     <table class="cartMeal">
     	<tr>
         	<td class="cartCol1">
-            <img src="images/meat.jpg" alt="" width="90" height="90">
+            <img src="../images/meat.jpg" alt="" width="90" height="90">
             </td>
             <td class="cartCol2" >
             <div>
@@ -94,7 +93,7 @@
     <table class="cartMeal">
     	<tr>
         	<td class="cartCol1">
-            <img src="images/meat.jpg" alt="" width="90" height="90">
+            <img src="../images/meat.jpg" alt="" width="90" height="90">
             </td>
             <td class="cartCol2" >
             <div>
@@ -116,7 +115,7 @@
     <table class="cartMeal">
     	<tr>
         	<td class="cartCol1">
-            <img src="images/meat.jpg" alt="" width="90" height="90">
+            <img src="../images/meat.jpg" alt="" width="90" height="90">
             </td>
             <td class="cartCol2" >
             <div>
