--- a/FoodDeliveryWholeProject/WebContent/html/pastas.html
+++ b/FoodDeliveryWholeProject/WebContent/html/pastas.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <link href="../CSS/mainBody.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/800px.css" rel="stylesheet" type="text/css"  media="screen and (max-width: 800px)" />
 <link href="../CSS/mainButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/menuButtons.css" rel="stylesheet" type="text/css" />
 <link href="../CSS/meals.css" rel="stylesheet" type="text/css" />
@@ -26,8 +25,8 @@
 			</ul>
 		</li>
 		
-		<li><a href="profile.html">Profile</a></li>
-		<li><a href="home.html">Logout</a></li>
+		<li><a href="profile.jsp">Profile</a></li>
+		<li><a href="logout.jsp">Logout</a></li>
 		</ul>          
     </div>  
    	<div id="Menu">
@@ -49,7 +48,7 @@
 		<table class="cartMeal">
     	<tr>
         	<td class="cartCol1">
-            <img src="images/meat.jpg" alt="" width="90" height="90">
+            <img src="../images/meat.jpg" alt="" width="90" height="90">
             </td>
             <td class="cartCol2" >
             <div>
@@ -71,7 +70,7 @@
     <table class="cartMeal">
     	<tr>
         	<td class="cartCol1">
-            <img src="images/meat.jpg" alt="" width="90" height="90">
+            <img src="../images/meat.jpg" alt="" width="90" height="90">
             </td>
             <td class="cartCol2" >
             <div>
@@ -93,7 +92,7 @@
     <table class="cartMeal">
     	<tr>
         	<td class="cartCol1">
-            <img src="images/meat.jpg" alt="" width="90" height="90">
+            <img src="../images/meat.jpg" alt="" width="90" height="90">
             </td>
             <td class="cartCol2" >
             <div>
@@ -115,7 +114,7 @@
     <table class="cartMeal">
     	<tr>
         	<td class="cartCol1">
-            <img src="images/meat.jpg" alt="" width="90" height="90">
+            <img src="../images/meat.jpg" alt="" width="90" height="90">
             </td>
             <td class="cartCol2" >
             <div>
