Bug po dobavqne na adresite sled reg;opravih page-ovete da sochat kum sign_up.jsp,a ne kum sign_up.html

--- a/FoodDeliveryWholeProject/WebContent/html/login.html
+++ b/FoodDeliveryWholeProject/WebContent/html/login.html
@@ -22,7 +22,7 @@
         <li><a href="home.html">Home</a></li>
 		<li><a href="search2.html">Search</a></li>
 		<li><a href="faq.html">Guide</a></li>		
-		<li><a href="sign_up.html">Register</a></li>
+		<li><a href="sign_up.jsp">Register</a></li>
 		<li><a href="login.html">Login</a></li>
 		</ul>            
     </div>  
@@ -41,7 +41,7 @@
 			<input type="password" name="password" required="required" /><br />
 		</div>	
          <br>
-        <a href="sign_up.html" style="margin-left:140px;">Създай нов акаунт</a>
+        <a href="sign_up.jsp" style="margin-left:140px;">Създай нов акаунт</a>
         <a href="lostpass.jsp" style="margin-left:10px;">Забравена парола</a>	
 		<div class="form">
         	<input type="submit" value="Submit" name="submit" style="font-size:20px; letter-spacing:2px; width:102px;height:30px;border:1px solid #8C8153;background-color:#C16845;color:#F0EFDF; float:right;cursor:pointer;"/>
