--- a/FoodDeliveryWholeProject/WebContent/html/search2.html
+++ b/FoodDeliveryWholeProject/WebContent/html/search2.html
@@ -60,7 +60,7 @@ function valthisform()
         <li><a href="home.html">Home</a></li>
 		<li><a href="search2.html">Search</a></li>
 		<li><a href="faq.html">Guide</a></li>		
-		<li><a href="sign_up.html">Register</a></li>
+		<li><a href="sign_up.jsp">Register</a></li>
 		<li><a href="login.html">Login</a></li>
 		</ul>            
     </div>  
