Welcome page added + changes in home.html

--- a/FoodDeliveryWholeProject/WebContent/html/home.html
+++ b/FoodDeliveryWholeProject/WebContent/html/home.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 <head>
-<link href="../CSS/mainBody.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/mainButtons.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/menuButtons.css" rel="stylesheet" type="text/css" />
-<link href="../CSS/meals.css" rel="stylesheet" type="text/css" />
+<link href="CSS/mainBody.css" rel="stylesheet" type="text/css" />
+<link href="CSS/mainButtons.css" rel="stylesheet" type="text/css" />
+<link href="CSS/menuButtons.css" rel="stylesheet" type="text/css" />
+<link href="CSS/meals.css" rel="stylesheet" type="text/css" />
 <meta charset="utf-8">
 <title>Food Delivery</title>
 
@@ -16,11 +16,11 @@
   <div id="Header"></div>
 		<div id="Buttons">
     <ul style="float:right">
-        <li><a href="home.html">Home</a></li>
-		<li><a href="search2.html">Search</a></li>
-		<li><a href="faq.html">Guide</a></li>		
-		<li><a href="sign_up.jsp">Register</a></li>
-		<li><a href="login.html">Login</a></li>
+        <li><a href="html/home.html">Home</a></li>
+		<li><a href="html/search2.html">Search</a></li>
+		<li><a href="html/faq.html">Guide</a></li>		
+		<li><a href="html/sign_up.jsp">Register</a></li>
+		<li><a href="html/login.html">Login</a></li>
 		</ul>            
     </div> 
    	<div id="Menu">
@@ -43,7 +43,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;" >
-            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -55,7 +55,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;">
-            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -72,7 +72,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;" >
-            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -84,7 +84,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;">
-            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -101,7 +101,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;" >
-            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -113,7 +113,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;">
-            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -130,7 +130,7 @@
     	<tr>
         	 <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;" >
-            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
@@ -142,7 +142,7 @@
             </td>
            <td style="width:50%;border:solid #66562F;border-width:1px;cursor:pointer" onClick="window.location='login.html';">
              <div style="float:left;width:90px;">
-            <img src="../images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
+            <img src="images/restaurant_images/don_vito.gif" alt="" width="90" height="90">
             </div>
             <div style="float:right;width:220px">
             <span class="mealName"> Име на ресторант </span>
