pushing whole merged project again

--- a/FoodDeliveryWholeProject/WebContent/html/layout.html
+++ b/FoodDeliveryWholeProject/WebContent/html/layout.html
@@ -18,7 +18,7 @@
     <ul>
         <li><a href="layout.html">Home</a></li>
 		<li><a href="search.html">Search</a></li>
-		<li><a href="cart.html">Cart</a></li>
+		<li><a href="cart.jsp">Cart</a></li>
 		<li><a href="archive.html">Archive</a>
 			<ul>
 				<li><a href="archive.html">My archive</a></li>
