--- a/FoodDeliveryWholeProject/WebContent/html/archive.html
+++ b/FoodDeliveryWholeProject/WebContent/html/archive.html
@@ -60,7 +60,7 @@ $("#skrit32").fadeToggle("slow");
     <ul>
         <li><a href="layout.html">Home</a></li>
 		<li><a href="search.html">Search</a></li>
-		<li><a href="cart.html">Cart</a></li>
+		<li><a href="cart.jsp">Cart</a></li>
 		<li><a href="archive.html">Archive</a>
 			<ul>
 				<li><a href="#">My archive</a></li>
