--- a/FoodDeliveryWholeProject/WebContent/html/search.html
+++ b/FoodDeliveryWholeProject/WebContent/html/search.html
@@ -59,7 +59,7 @@ function valthisform()
     <ul>
         <li><a href="layout.html">Home</a></li>
 		<li><a href="search.html">Search</a></li>
-		<li><a href="cart.html">Cart</a></li>
+		<li><a href="cart.jsp">Cart</a></li>
 		<li><a href="archive.html">Archive</a>
 			<ul>
 				<li><a href="archive.html">My archive</a></li>
